--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
+  background: 
+    linear-gradient(180deg,#dbf4ff,#fff1f1) 
     rgb(var(--background-start-rgb));
 }
