--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,3 +1,8 @@
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(var(--theme1),var(--theme1-3));
+}
+
 .linearGradient-1 {
   background-image: linear-gradient(90deg, #00DBDE 0%, #fb00ff 100%);
 }
