style: 渐变 not finish

--- a/src/app/(items)/background/index.module.css
+++ b/src/app/(items)/background/index.module.css
@@ -2,7 +2,26 @@
   display: flex;
   justify-content: space-around;
 }
-.base li{
+.base li {
   width: 60px;
   height: 60px;
+}
+.noStripe {
+  background: linear-gradient(
+    45deg,
+    white,
+    white 11px,
+    transparent 11px,
+    transparent 20px
+  );
+}
+.cycleStripe {
+  background: repeating-linear-gradient(
+    45deg,
+    45deg,
+    white,
+    white 11px,
+    transparent 11px,
+    transparent 20px
+  );
 }
