style: 使用scss 循环细化颜色，优化色盘

--- a/src/app/(items)/background/index.module.css
+++ b/src/app/(items)/background/index.module.css
@@ -69,3 +69,7 @@
   from { background-position-x: -10px, 0; }
   to { background-position-x: -30px, -20px; }
 }
+
+.colorPanel {
+  background: conic-gradient(red, orange, yellow, green, teal, blue, purple);
+}
