feat: background-clip: text

--- a/src/app/(items)/background/index.module.scss
+++ b/src/app/(items)/background/index.module.scss
@@ -99,3 +99,50 @@ $totalStops:20;
       filter: hue-rotate(360deg);
   }
 }
+.clipBorder, .clipPadding, .clipContent {
+  padding: 20px;
+  background: #000;
+  background-repeat: no-repeat;
+  border: 10px dashed rgb(0, 174, 255);
+}
+.clipBorder {
+  background-clip: border-box;
+}
+.clipPadding {
+  background-clip: padding-box;
+}
+.clipContent {
+  background-clip: content-box;
+}
+$img: '/avatar.jpg';
+.backgroundClip {
+  font-size: 50px;
+  text-align: center;
+  font-weight: bold;
+  color: transparent;
+  background: url($img) no-repeat center center;
+  background-size: cover;
+  background-clip: text;
+}
+.text-clip {
+  color: transparent;
+  background-clii: text;
+}
+.backgroundGradientClip {
+  font-size: 50px;
+  color: transparent;
+  background: linear-gradient(45deg, #ffeb3b, #009688, yellowgreen, pink, #03a9f4, #9c27b0, #8bc34a);
+  background-clip: text;
+}
+.backgroundGradientAniClip {
+  font-size: 50px;
+  color: transparent;
+  background: linear-gradient(45deg, #ffeb3b, #009688, yellowgreen, pink, #03a9f4, #9c27b0, #8bc34a);
+  background-clip: text;
+  animation: huerotate 3s infinite;
+}
+@keyframes huerotate {
+  100% {
+      filter: hue-rotate(360deg);
+  }
+}
