--- a/src/app/(items)/clip-use/index.module.scss
+++ b/src/app/(items)/clip-use/index.module.scss
@@ -32,9 +32,7 @@
   );
 }
 .clipNotching {
-  background: linear-gradient(
-    45deg,var(--theme1),var(--theme1-2)
-  );
+  background: linear-gradient(45deg, var(--theme1), var(--theme1-2));
   clip-path: polygon(
     15px 0,
     calc(100% - 15px) 0,
@@ -45,4 +43,32 @@
     0 calc(100% - 15px),
     0 15px
   );
+}
+
+.arrow {
+  background: linear-gradient(45deg, var(--theme1), var(--theme1-2));
+  clip-path: polygon(
+    0 0,
+    30px 50%,
+    0 100%,
+    calc(100% - 30px) 100%,
+    100% 50%,
+    calc(100% - 30px) 0
+  );
+}
+.arrowLeft {
+  div {
+    width: 200px;
+    height: 100px;
+    clip-path: polygon(
+      40% 0%,
+      40% 20%,
+      100% 20%,
+      100% 80%,
+      40% 80%,
+      40% 100%,
+      0% 50%
+    );
+    background: var(--theme1-2);
+  }
 }
