--- a/src/app/(items)/clip-use/index.module.scss
+++ b/src/app/(items)/clip-use/index.module.scss
@@ -72,3 +72,77 @@
     background: var(--theme1-2);
   }
 }
+
+.aniBorder {
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: 2px solid var(--theme1-3);
+    animation: clippath 3s infinite linear;
+  }
+  @keyframes clippath {
+    0%,
+    100% {
+      clip-path: inset(0 0 95% 0);
+    }
+    25% {
+      clip-path: inset(0 95% 0 0);
+    }
+    50% {
+      clip-path: inset(95% 0 0 0);
+    }
+    75% {
+      clip-path: inset(0 0 0 95%);
+    }
+  }
+}
+
+.btnAniClip {
+  position: relative;
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 80px;
+  background: var(--theme1-2);
+  height: 80px!important;
+  border-radius: 10px;
+  &:hover {
+    background: var(--theme1-3);
+  }
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+    border-radius: 10px;
+    border: 2px solid var(--theme1-3);
+    animation: clippath2 3s infinite linear;
+  }
+  &::after {
+    animation: clippath2 3s infinite -1.5s linear; // 延迟一半时间，实现两个动画错开
+  }
+  @keyframes clippath2 {
+    0%,
+    100% {    
+      // 控制内部裁剪区域，
+      clip-path: inset(0 0 95% 0);
+    }
+    25% {
+      clip-path: inset(0 95% 0 0);
+    }
+    50% {
+      clip-path: inset(95% 0 0 0);
+    }
+    75% {
+      clip-path: inset(0 0 0 95%);
+    }
+  }
+}
