--- a/src/app/(items)/shadow/index.module.scss
+++ b/src/app/(items)/shadow/index.module.scss
@@ -7,7 +7,7 @@
 }
 
 .shadowBox::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   left: 5%;
@@ -19,4 +19,47 @@
   transform-origin: center center;
   box-shadow: 0 0 20px 15px var(--theme1-3);
   z-index: -1;
+}
+.shadowText {
+  font-size: 60px;
+  background: #999;
+  p {
+    color: #999;
+    // text-shadow: 1px 1px 1px #000; // 添加阴影
+    text-shadow: 1px 1px 1px #fff, -1px -1px 1px #000;
+  }
+}
+.shadowBtn {
+  background-color: #fff;
+  display: flex;
+  text-align: center;
+  div {
+    cursor: pointer;
+    user-select: none;
+    margin: 20px;
+    border-radius: 20px;
+    width: 120px;
+    height: 120px;
+    background: #e9ecef;
+    color: #333;
+    box-shadow: 7px 7px 12px rgba(0, 0, 0, 0.4),
+      -7px -7px 12px rgba(255, 255, 255, 0.9);
+    transition: 0.2s all;
+    &:active {
+      box-shadow: 0 0 0 rgba(0, 0, 0, 0.4), 0 0 0 rgba(255, 255, 255, 0.9),
+        inset -7px -7px 12px rgba(255, 255, 255, 0.9),
+        inset 7px 7px 12px rgba(0, 0, 0, 0.4);
+    }
+  }
+
+  div:nth-child(2) {
+    transition: 0.2s all;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0.4), 0 0 0 rgba(255, 255, 255, 0.9),
+      inset -7px -7px 12px rgba(255, 255, 255, 0.9),
+      inset 7px 7px 12px rgba(0, 0, 0, 0.4);
+    &:active {
+      box-shadow: 7px 7px 12px rgba(0, 0, 0, 0.4),
+        -7px -7px 12px rgba(255, 255, 255, 0.9);
+    }
+  }
 }
