--- a/src/app/(items)/shadow/index.module.scss
+++ b/src/app/(items)/shadow/index.module.scss
@@ -63,3 +63,33 @@
     }
   }
 }
+
+$img: "/avatar-color.jpeg";
+.colorShadow {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+}
+.avator {
+  position: relative;
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: url($img) no-repeat center center;
+  background-size: cover;
+  
+  &::after {
+      content: "";
+      position: absolute;
+      top: 10%;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background: inherit;
+      background-size: 100% 100%;
+      filter: blur(10px) brightness(80%) opacity(.8);
+      z-index: -1;
+  }
+}
