--- a/src/app/(items)/shadow/index.module.scss
+++ b/src/app/(items)/shadow/index.module.scss
@@ -117,8 +117,8 @@ $img: '/avatar-color.jpeg';
       #ff004d 20%,
       transparent 20.5%,
       transparent
-      );
-      // #3d3d3d
+    );
+    // #3d3d3d
     // filter: blur(2px);
     animation: rotateColor 2s linear infinite;
     // animation: crack2 1.5s linear forwards;
@@ -144,3 +144,56 @@ $img: '/avatar-color.jpeg';
   z-index: 10;
 }
 
+.copyBox {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #333;
+  box-sizing: border-box;
+  box-shadow: 40px 40px 0 0 #000;
+}
+.copyDot {
+  position: relative;
+  line-height: 80px;
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #000;
+    left: -20px;
+    top: 50%;
+    transform: translate(0, -50%);
+    box-shadow: -20px 0 #000, -40px 0 #000;
+  }
+
+  &::after {
+    left: unset;
+    right: -60px;
+    box-shadow: 20px 0 #000, 40px 0, #000;
+  }
+}
+.cloud {
+  cursor: pointer;
+  width:100px;
+  height:100px;
+  background:#999;
+  border-radius:50%;
+  box-shadow:
+    120px 0px 0 -10px #999,
+    95px 20px 0 0px #999,
+    30px 30px 0 -10px #999,
+    90px -20px 0 0px #999,
+    40px -40px 0 0px #999;
+}
+.multiBox {
+  width: 120px;
+  height: 60px;
+  background: cyan;
+  box-shadow: 
+    inset 0 0 0 6px var(--theme1),
+    0 0 0 10px var(--theme1-2), 
+    0 0 0 15px var(--theme1-3),
+    0 2px 5px 15px #666;
+}
