--- a/src/app/(items)/shadow/index.module.scss
+++ b/src/app/(items)/shadow/index.module.scss
@@ -176,26 +176,19 @@ $img: '/avatar-color.jpeg';
 }
 .cloud {
   cursor: pointer;
-  width:100px;
-  height:100px;
-  background:#999;
-  border-radius:50%;
-  box-shadow:
-    120px 0px 0 -10px #999,
-    95px 20px 0 0px #999,
-    30px 30px 0 -10px #999,
-    90px -20px 0 0px #999,
-    40px -40px 0 0px #999;
+  width: 100px;
+  height: 100px;
+  background: #999;
+  border-radius: 50%;
+  box-shadow: 120px 0px 0 -10px #999, 95px 20px 0 0px #999,
+    30px 30px 0 -10px #999, 90px -20px 0 0px #999, 40px -40px 0 0px #999;
 }
 .multiBox {
   width: 120px;
   height: 60px;
   background: cyan;
-  box-shadow: 
-    inset 0 0 0 6px var(--theme1),
-    0 0 0 10px var(--theme1-2), 
-    0 0 0 15px var(--theme1-3),
-    0 2px 5px 15px #666;
+  box-shadow: inset 0 0 0 6px var(--theme1), 0 0 0 10px var(--theme1-2),
+    0 0 0 15px var(--theme1-3), 0 2px 5px 15px #666;
 }
 .clickBtn {
   width: 120px;
@@ -203,9 +196,7 @@ $img: '/avatar-color.jpeg';
   background: #fc0;
   border-radius: 20px;
   border: 5px solid #333;
-  box-shadow: 
-      inset 0 -5px 0 #aaa,
-      inset 0 -10px 0 #000;
+  box-shadow: inset 0 -5px 0 #aaa, inset 0 -10px 0 #000;
 }
 .declineCircle {
   width: 120px;
@@ -223,4 +214,26 @@ $img: '/avatar-color.jpeg';
   border-radius: 100%;
   box-shadow: inset 0 5px 0 6px #09c;
   transform: rotate(-40deg);
+}
+
+@function shadowSet($vx, $vy, $color) {
+  $shadow: 0 0 0 0 $color;
+
+  @for $i from 0 through 100 {
+    $x: calc(2 * sin(#{$i * 15 * 1deg}) * #{$vy});
+    $y: $i * $vy;
+    $shadow: $shadow, #{$y} #{$x} 0 0 $color;
+  }
+
+  @return $shadow;
+}
+
+.curve {
+  margin: auto;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    animation: move 3s infinite linear;
+    background: #f00;
+    box-shadow: shadowSet(1px, 1px, #f00);
 }
