--- a/src/app/(items)/animation/index.module.scss
+++ b/src/app/(items)/animation/index.module.scss
@@ -30,6 +30,36 @@
   .item:nth-child(3) {
     animation: rotate 3s infinite 2s linear;
   }
+  .item2 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    // background: linear-gradient(90deg, #fff, #352525, #fff);
+    transform: rotate(0);
+  }
+  .item2::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 60px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #000;
+  }
+  .item2:nth-child(1) {
+    animation: rotate 3s infinite linear;
+  }
+  .item2:nth-child(2) {
+    animation: rotate 3s infinite -1s linear;
+  }
+  .item2:nth-child(3) {
+    animation: rotate 3s infinite -2s linear;
+  }
 }
 @keyframes rotate {
   0% {
