style: add opacity animation

--- a/src/app/(items)/animation/index.module.scss
+++ b/src/app/(items)/animation/index.module.scss
@@ -92,9 +92,11 @@
   }
   @keyframes move {
     0% {
+      opacity: 1;
       transform: translate(0, 0);
     }
     100% {
+      opacity: 0;
       transform: translate(0, -300px);
     }
   }
