--- a/src/app/(items)/svg/index.module.scss
+++ b/src/app/(items)/svg/index.module.scss
@@ -32,3 +32,30 @@
 .rectSp3 {
   stroke-dasharray: 50 20;
 }
+.rectSp4 {
+  width: 250px;
+  height: 50px;
+  stroke: #673ab7;
+  stroke-width: 1px;
+  fill: transparent;
+  stroke-dasharray: 100 500;
+  stroke-dashoffset: 225; 
+}
+.aniRect {
+  width: 250px;
+  height: 50px;
+  stroke: #673ab7;
+  stroke-width: 1px;
+  fill: transparent;
+  stroke-dasharray: 100 500;
+  stroke-dashoffset: 225;
+  transition: all 1s;
+}
+.container{
+  &:hover .aniRect {
+    stroke: deeppink;
+    stroke-dasharray: 600 0;
+    stroke-dashoffset: 475;
+    stroke-width: 3px;
+  }
+}
