--- a/src/app/(items)/transition/index.module.scss
+++ b/src/app/(items)/transition/index.module.scss
@@ -60,3 +60,36 @@
     border-right: 3px solid #00e2ff;
   }
 }
+
+.guaguale {
+  .g-box {
+    position: relative;
+    height: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .g-row {
+    width: 600px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+  .g-item {
+    width: 20px;
+    height: 20px;
+    background: rgba(100, 100, 100, 1);
+    border-radius: 50%;
+    transform: scale(1.6);
+  }
+  .g-item {
+    transform: scale(1.6);
+    transition: background 9999999s;
+  }
+  .g-item:hover {
+    background: rgba(100, 100, 100, 0);
+    transition-duration: 0s;
+  }
+}
